Ensure the submenus stretch if they are longer than the parent menu

--- a/wordpress/wp-content/themes/mapaction/sass/elements/_main-navigation.scss
+++ b/wordpress/wp-content/themes/mapaction/sass/elements/_main-navigation.scss
@@ -75,9 +75,10 @@
 	ul.sub-menu {
 		display: none;
 		margin: 0;
-		width: 100%;
+		min-width: 100%;
 		li {
-			width: 100%;
+			min-width: 100%;
+			white-space: nowrap;
 		}
 	}
 	li:hover {
